# vc200

./: .clang-format  LICENSE
stalker_driver/: CMakeLists.txt  package.xml
stalker_driver/docs/: readme.md
stalker_driver/include/stalker_driver/: DEMA.h  DownstreamDataType.h  STInterfaceClientUDP.h  UpstreamDataType.h  accelerometer.h  configuration.h  current_measurement.h  gyroscope.h  laser_ruler.h  magnetometer.h  motor_controller.h  statistics.h  timers.h
stalker_driver/src/: STInterfaceClientUDP.cpp  UpstreamDataType.cpp  accelerometer.cpp  configuration.cpp  current_measurement.cpp  gyroscope.cpp  laser_ruler.cpp  magnetometer.cpp  motor_controller.cpp  statistics.cpp  timers.cpp
vc200_controller/: CMakeLists.txt  package.xml
vc200_controller/cfg/: controllers.yaml  ekf_localization.yaml  ekf_localization_map.yaml
vc200_controller/cfg/maps/: map.pgm  map.yaml  map2.data  map2.pgm  map2.yaml
vc200_controller/cfg/nav/: base_local_planner_params.yaml  base_local_planner_params3.yaml  costmap_common_params.yaml  dwa_local_planner_params1.yaml  eband_local_planner_params3.yaml  global_costmap_params.yaml  kj_dwa_local_planner_params1.yaml  local_costmap_params.yaml  mpc_local_planner_params1.yaml  teb_local_planner_params.yaml  teb_local_planner_params2.yaml
vc200_controller/include/vc200_controller/: vc200_imu.h  vc200_robot_hw.h
vc200_controller/launch/: ctr.launch  local.launch  test.launch  vc200_controller.launch
vc200_controller/scripts/: badania_pwm.py  converter.py  vel_calc.py
vc200_controller/src/: controll.cpp  imu_controller.cpp  vc200_robot_hw.cpp
vc200_description/: CMakeLists.txt  package.xml  rviz.rviz
vc200_description/launch/: debug.launch  model.launch
vc200_description/realsense2_description/launch/: view_d435i_model.launch
vc200_description/urdf/: parameters.xacro  test.xacro  vc200.gazebo.xacro  vc200_description.xacro
vc200_description/urdf/macros/: imu.xacro  (+9 more)
vc200_driver/: CMakeLists.txt  package.xml
vc200_driver/cfg/: stm.yaml  stm_config.yaml  stm_imu.yaml  stm_motor_controller.yaml
vc200_driver/launch/: test.launch
vc200_driver/src/: component.cpp  configuration.cpp  imu.cpp  laser_ruler.cpp  motor_controller.cpp  statistics.cpp  timers.cpp  vc200_driver.cpp
vc200_driver/test/: test.cpp
vc200_gazebo/: CMakeLists.txt  package.xml
vc200_gazebo/cfg/: base_local_planner_params.yaml  costmap_common_params.yaml
vc200_gazebo/launch/: nav.launch  vc200.launch
vc200_gazebo/map/: house.pgm  house.yaml  map.pgm  map.yaml
vc200_gazebo/worlds/: 804.world  vc200.world
(+18 files in other folders)
